# OLIGO-EMOJIS

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md
oligoemojis/: __init__.py  oligoemojis.py
